--- a/src/main/resources/webview/index.html
+++ b/src/main/resources/webview/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ECA</title>
-    <link rel="stylesheet" href="/eca-webview/assets/index.css" />
-    <script type="module" crossorigin src="/eca-webview/assets/index.js"></script>
-    <script>window.mediaUrl = "/eca-webview/public"</script>
+    <link rel="stylesheet" href="/dist/assets/index.css" />
+    <script type="module" crossorigin src="/dist/assets/index.js"></script>
+    <script>window.mediaUrl = "/dist"</script>
   </head>
   <body>
     <div id="root"></div>
