First colors support

--- a/src/main/resources/webview/index.html
+++ b/src/main/resources/webview/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ECA</title>
     <link rel="stylesheet" href="/dist/assets/index.css" />
+    <link rel="stylesheet" href="http://eca-theme/theme.css" />
     <script type="module" crossorigin src="/dist/assets/index.js"></script>
     <script>window.mediaUrl = "/dist"</script>
   </head>
@@ -13,7 +14,7 @@
     <div id="root"></div>
 
     <script>
-      localStorage.setItem("ide", '"jetbrains"');
+      localStorage.setItem("editor", '"jetbrains"');
     </script>
   </body>
 </html>
